--- a/pom.xml
+++ b/pom.xml
@@ -59,10 +59,11 @@
             <version>3.1.3</version>
         </dependency>
         <dependency>
-            <groupId>org.xerial</groupId>
-            <artifactId>sqlite-jdbc</artifactId>
-            <version>3.43.0.0</version>
+            <groupId>org.postgresql</groupId>
+            <artifactId>postgresql</artifactId>
+            <version>42.6.0</version>
         </dependency>
+
     </dependencies>
 
     <build>
