--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,1 +1,3 @@
-spring.datasource.url=jdbc:sqlite:D://DB/Chinook.db
+spring.datasource.url=jdbc:postgresql://localhost:52374/postgres
+spring.datasource.username=postgres
+spring.datasource.password=postgres
